--- a/gradle.properties
+++ b/gradle.properties
@@ -2,39 +2,41 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-version=1.0
-group=com.nemonotfound.nemos
+version=1.1.1
+group=com.devnemo.nemos.mending
 java_version=21
 
 # Common
-minecraft_version=1.21.5
-mod_name=Nemo's
-mod_author=NemoNotFound
-mod_id=examplemod
-mod_id_jar=
+minecraft_version=1.21.7
+mod_name=Nemo's Mending
+mod_author=DevNemo
+mod_id=nemos_mending
+mod_id_jar=nemos-mending
 license=MIT
-credits=NemoNotFound
-description=The description of your mod. \nAccepts multilines.
-minecraft_version_range=[1.21.5]
+credits=DevNemo
+description=Nemo's Mending gets your mending tools repaired even if they are not in your equipment slots!
+minecraft_version_range=[1.21.7]
 ## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
 ## https://projects.neoforged.net/neoforged/neoform
-neo_form_version=1.21.5-20250325.162830
+neo_form_version=1.21.7-20250630.141722
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
 parchment_minecraft=1.21.5
-parchment_version=2025.04.19
+parchment_version=2025.06.15
 
 # Fabric
-fabric_version=0.124.2+1.21.5
+fabric_version=0.128.2+1.21.7
 fabric_loader_version=0.16.14
 
 # Forge
-forge_version=55.0.16
-forge_loader_version_range=[55,)
+forge_version=57.0.2
+forge_loader_version_range=[57,)
 
 # NeoForge
-neoforge_version=21.5.66-beta
-neoforge_loader_version_range=[5,)
+neoforge_version=21.7.11-beta
+neoforge_loader_version_range=[7,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+clumps_version=25.0.0.1
