--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ group=com.devnemo.nemos.mending
 java_version=21
 
 # Common
-minecraft_version=1.21.8
+minecraft_version=1.21.10
 mod_name=Nemo's Mending
 mod_author=DevNemo
 mod_id=nemos_mending
@@ -15,28 +15,28 @@ mod_id_jar=nemos-mending
 license=MIT
 credits=DevNemo
 description=Nemo's Mending gets your mending tools repaired even if they are not in your equipment slots!
-minecraft_version_range=[1.21.8]
+minecraft_version_range=[1.21.10]
 ## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
 ## https://projects.neoforged.net/neoforged/neoform
-neo_form_version=1.21.8-20250717.133445
+neo_form_version=1.21.10-20251010.172816
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
-parchment_minecraft=1.21.8
-parchment_version=2025.07.20
+parchment_minecraft=1.21.9
+parchment_version=2025.10.05
 
 # Fabric
-fabric_version=0.133.4+1.21.8
-fabric_loader_version=0.17.2
+fabric_version=0.135.0+1.21.10
+fabric_loader_version=0.17.3
 
 # Forge
-forge_version=58.1.1
-forge_loader_version_range=[58,)
+forge_version=60.0.3
+forge_loader_version_range=[60,)
 
 # NeoForge
-neoforge_version=21.8.46
-neoforge_loader_version_range=[8,)
+neoforge_version=21.10.10-beta
+neoforge_loader_version_range=[10,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-clumps_version=26.0.0.1
+clumps_version=28.0.0.1
