--- a/gradle.properties
+++ b/gradle.properties
@@ -39,4 +39,9 @@ neoforge_loader_version_range=[11,)
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# Dependencies
 clumps_version=28.0.0.1
+
+# Upload
+curseforge_project_id=988402
+modrinth_project_id=nemos-mending
